use pdflib for pdfs;scroll back to prev Y position when done generating pdf or editing;hide preview when generating pdfs on mobile

--- a/client/src/components/upload/CustomDropZone.css
+++ b/client/src/components/upload/CustomDropZone.css
@@ -19,6 +19,11 @@
     margin-bottom: 0.5rem;
 }
 
+.in-mobile-pdf {
+    width: 100%;
+    margin-bottom: 0.5rem;
+}
+
 .drop-zone-text {
      position: absolute;
      top: 40%;
