--- a/client/src/components/pdf/PdfCertificate.css
+++ b/client/src/components/pdf/PdfCertificate.css
@@ -23,6 +23,13 @@
   gap: 2rem;
 }
 
+.pdf-maker-mobile-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .pdf-maker-preview {
   width: 50%;
   height: 100vh;
@@ -35,4 +42,20 @@
   align-items: center;
   gap: 0.5rem;
   width: 50%;
+}
+
+.pdf-maker-editor-zone.in-mobile {
+  width: 100%;
+}
+
+.pdf-editor-navigation {
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
+}
+
+.arrow-container {
+  width: 24px;
+  display: flex;
+  justify-content: center;
 }
