--- a/client/src/components/gallery/Card.css
+++ b/client/src/components/gallery/Card.css
@@ -1,12 +1,3 @@
-@keyframes placeholderShimmer {
-    0% {
-        background-position: -80vw 0;
-      }
-      100% {
-        background-position: 80vw 0;
-      }
-  }
-
   .card {
     display: flex;
     flex-direction: column;
@@ -20,62 +11,15 @@
     position: relative;
   }
 
-  .card-header-container {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-left: 10px;
-  }
-
-  .card-header {
-    font-size: small;
-    font-weight: 600;
-  }
-
-  .card-position-container {
-    height: auto;
-    color: #FFFFFF;
-    text-align: center;
-    margin-right: 0.5rem;
-  }
-
-  .card-image-placeholder {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, #eff1f3 4%, #e2e2e2 25%, #eff1f3 36%);
-    background-size: 80vw 100%;
-    animation: placeholderShimmer 1.5s linear infinite forwards;
-  }
-
-  .card-image-container {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
-  }
-
-  .card-image {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-  }
-
-  .card-actions, .mobile-card-actions {
+  .card-actions {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.7rem;
     padding: 1rem;
     cursor: pointer;
-}
+  }
 
-.mobile-card-actions {
-  gap: 1rem;
-}
-
-.card-delete-icon {
+  .card-delete-icon {
   width: 25px;
-}
+  }
