--- a/client/src/components/gallery/CardFooter.css
+++ b/client/src/components/gallery/CardFooter.css
@@ -1,17 +1,13 @@
-.art-info-container {
+.card-footer-container {
     padding: 0 0.75rem 0.75rem 0.75rem;  
 }
 
-.art-info-item {
+.card-footer-item {
     overflow: hidden;
     font-size: 0.85rem;
 }
 
-.art-info-item .input-label {
+.input-label {
     font-weight: 600;
     font-size: 0.85rem;
-}
-
-.margin-top {
-    margin-top: 0.5rem;
 }
