--- a/client/src/components/gallery/list view/ListView.css
+++ b/client/src/components/gallery/list view/ListView.css
@@ -1,3 +1,15 @@
+.list-header {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    gap: 0.5rem;
+}
+
+.width-20 {
+    width: 20%;
+}
+
 .rows {
     display: flex;
     flex-direction: column;
@@ -9,7 +21,7 @@
     flex-direction: row;
 }
 
-.row-position-container {
+.row-position {
     position: relative;
     width: 70px;
     height: 70px;
@@ -24,7 +36,7 @@
     color: #FFFFFF;
 }
 
-.row-container, .header-container {
+.row-container, .list-header {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -36,11 +48,9 @@
     border-bottom-right-radius: 0.75rem;
 }
 
-.header-container {
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+.list-header .item, .rows .item {
+    text-align: center;
+    flex: 1;
 }
 
 .row-image {
@@ -67,11 +77,6 @@
     padding: 0.5rem;
     gap: 0.75rem;
     cursor: pointer;
-}
-
-.info-text {
-    text-align: center;
-    flex: 1 1;
 }
 
 .full-info-dialog {
